--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <title>My Awesome Site</title>
 </head>
 <body>
-  Stuff to See!
+  <h1>Stuff to See!</h1>
+  <h2>Stuff to See!</h2>
+  <h3>Stuff to See!</h3>
+  <h4>Stuff to See!</h4>
+  <h5>Stuff to See!</h5>
+
 </body>
 </html>
